force-app/main/default/objects/Asset/fields/Accounting_Data_Request_Completed__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Data_Request_Completed__c</fullName>
    <label>Accounting Data Request Completed</label>
    <type>DateTime</type>
</CustomField>