force-app/main/default/objects/Asset/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Notes whether or not the Asset is being billed.</description>
    <inlineHelpText>Notes whether or not the Asset is being billed.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>