force-app/main/default/objects/Asset/fields/Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_End_Date__c</fullName>
    <description>Used for setting Contract Term End Date on &quot;Add Product&quot; Opportunities.  Set by a rollup summary.</description>
    <inlineHelpText>Used for setting Contract Term End Date on &quot;Add Product&quot; Opportunities.  Set by a rollup summary.</inlineHelpText>
    <label>Contract End Date</label>
    <type>Date</type>
</CustomField>