force-app/main/default/objects/Asset/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <formula>IF(   CONTAINS(Product2.Name, &#39;Monthly&#39;), &#39;Month-to-month&#39; , 
      IF( CONTAINS(Product2.Name, &#39;Bundle&#39;), &#39;Coterminous&#39;, 
          IF( CONTAINS(Product2.Name, &#39;Elite&#39;) , &#39;Elite&#39; , 
              IF (CONTAINS(Product2.Name, &#39;Premier&#39;), &#39;Premier&#39; , 
                  IF (CONTAINS(Product2.Name, &#39;Healthgrades&#39;), &#39;Healthgrades&#39; , &#39;Unknown&#39;
                     )
                  )
             )
         )
   )</formula>
    <label>Contract Type</label>
    <type>Text</type>
</CustomField>