force-app/main/default/objects/Asset/fields/Current_Cancel_Request__c.field-meta.xml
<CustomField>
    <fullName>Current_Cancel_Request__c</fullName>
    <formula>IF(ISNULL (Most_Recent_Cancel_Request_Date__c), False, IF( Most_Recent_Cancel_Request_Date__c &lt; Most_Recent_Contract_Signed_Date__c , False, True))</formula>
    <label>Current Cancel Request</label>
    <type>Checkbox</type>
</CustomField>