force-app/main/default/objects/Asset/fields/Current_Product_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Current_Product_Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Shows the related subscription that has the most distant Contract End Date that is not Terminated.  Set from trigger.  Trigger activated by Subscription Last Modified field.</description>
    <label>Current Product Subscription</label>
    <referenceTo>RecurSoft__Product_Subscription__c</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>