force-app/main/default/objects/Asset/fields/First_Message_Sent__c.field-meta.xml
<CustomField>
    <fullName>First_Message_Sent__c</fullName>
    <label>First Message Sent</label>
    <type>Date</type>
</CustomField>