force-app/main/default/objects/Asset/fields/Hide_Limelight_URL__c.field-meta.xml
<CustomField>
    <fullName>Hide_Limelight_URL__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To manually hide the Limelight URL if a customer has disabled the feature or doesn&#39;t want to display it on their Healthgrades profile.</description>
    <label>Hide Limelight URL</label>
    <type>Checkbox</type>
</CustomField>