force-app/main/default/objects/Asset/fields/Last_Message_Sent__c.field-meta.xml
<CustomField>
    <fullName>Last_Message_Sent__c</fullName>
    <label>Last Message Sent</label>
    <type>Date</type>
</CustomField>