force-app/main/default/objects/Asset/fields/Limelight_URL__c.field-meta.xml
<CustomField>
    <fullName>Limelight_URL__c</fullName>
    <formula>IF(ISPICKVAL( Product2.Family, &quot;Limelight&quot; ) &amp;&amp;  Active__c &amp;&amp; !Hide_Limelight_URL__c ,
 Account.Limelight_URL__c ,
null )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Limelight URL</label>
    <type>Text</type>
</CustomField>