force-app/main/default/objects/Asset/fields/Most_Recent_Cancel_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Cancel_Request_Date__c</fullName>
    <label>Most Recent Cancel Request Date</label>
    <type>Date</type>
</CustomField>