force-app/main/default/objects/Asset/fields/Most_Recent_Cancel_Request_Stage__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Cancel_Request_Stage__c</fullName>
    <label>Most Recent Cancel Request Stage</label>
    <length>100</length>
    <type>Text</type>
</CustomField>