force-app/main/default/objects/Asset/fields/Most_Recent_Competitor_Buyout__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Competitor_Buyout__c</fullName>
    <label>Most Recent Competitor Buyout</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>4 Patient Care</fullName>
            </value>
            <value>
                <fullName>DemandForce</fullName>
            </value>
            <value>
                <fullName>eCentral</fullName>
            </value>
            <value>
                <fullName>eReminders</fullName>
            </value>
            <value>
                <fullName>Lighthouse</fullName>
            </value>
            <value>
                <fullName>Patient Activator</fullName>
            </value>
            <value>
                <fullName>Phone Tree</fullName>
            </value>
            <value>
                <fullName>PM/EMR</fullName>
            </value>
            <value>
                <fullName>Practice Mojo</fullName>
            </value>
            <value>
                <fullName>Sesame</fullName>
            </value>
            <value>
                <fullName>Teledental</fullName>
            </value>
            <value>
                <fullName>Televox</fullName>
            </value>
            <value>
                <fullName>Weave</fullName>
            </value>
            <value>
                <fullName>Websystem3</fullName>
            </value>
            <value>
                <fullName>RevenueWell</fullName>
            </value>
            <value>
                <fullName>ZocDoc</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>