force-app/main/default/objects/Asset/fields/Most_Recent_Contract_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Contract_Signed_Date__c</fullName>
    <description>Will be the same as the original unless the customer has cancelled and reactivated.</description>
    <inlineHelpText>Will be the same as the original unless the customer has cancelled and reactivated.</inlineHelpText>
    <label>Most Recent Contract Signed Date</label>
    <type>Date</type>
</CustomField>