force-app/main/default/objects/Asset/fields/Most_Recent_Contract_Term_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Contract_Term_Start_Date__c</fullName>
    <label>Most Recent Contract Term Start Date</label>
    <type>Date</type>
</CustomField>