force-app/main/default/objects/Asset/fields/Most_Recent_Number_of_Free_Months__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Number_of_Free_Months__c</fullName>
    <label>Most Recent Number of Free Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>