force-app/main/default/objects/Asset/fields/Most_Recent_Price_Book_Name__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Price_Book_Name__c</fullName>
    <description>Gives the names of the Price Book</description>
    <formula>CASE(Most_Recent_Pricebook__r.Name,  &quot;1. SR Premier&quot;, &quot;Premier&quot;, 
                                     &quot;2. SR Elite&quot;, &quot;Elite&quot;, 
                                     &quot;3. SR Premier - Satellite&quot;, &quot;Premier - Satellite&quot;,
                                     &quot;4. SR Elite - Satellite&quot;, &quot;Elite - Salellite&quot;,
                                     &quot;5. Partner - Vision Source&quot;, &quot;Vision Source&quot;,
                                     &quot;6. Competitor - LH/RW&quot;, &quot;LH/RW Competitor Offer (18 Mo/6 Sat)&quot;,
                                     &quot;Healthgrades 1&quot;, &quot;Healthgrades - Dental/Optometrist&quot;,
                                     &quot;Healthgrades 2&quot;, &quot;Healthgrades - Dermatologist&quot;,
                                     &quot;Healthgrades 3&quot;, &quot;Healthgrades - Cosmetics/Ophthalmology&quot;,
                                     &quot;Standard Price Book&quot;, &quot;Standard Price Book&quot;,
                                     Most_Recent_Pricebook__r.Name)</formula>
    <label>Most Recent Price Book Name</label>
    <type>Text</type>
</CustomField>