force-app/main/default/objects/Asset/fields/Most_Recent_Pricebook__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Pricebook__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Most Recent Pricebook</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>