force-app/main/default/objects/Asset/fields/Most_Recent_Termination_Date__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Termination_Date__c</fullName>
    <label>Most Recent Termination Date</label>
    <type>Date</type>
</CustomField>