force-app/main/default/objects/Asset/fields/Next_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Invoice_Date__c</fullName>
    <description>Used in setting the Contract Term Start Date for &quot;Add Product&quot; Opportunities. Set by rollup summary.</description>
    <inlineHelpText>Used in setting the Contract Term Start Date for &quot;Add Product&quot; Opportunities. Set by rollup summary.</inlineHelpText>
    <label>Next Invoice Date</label>
    <type>Date</type>
</CustomField>