force-app/main/default/objects/Asset/fields/Original_Contract_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Contract_Signed_Date__c</fullName>
    <label>Original Contract Signed Date</label>
    <type>Date</type>
</CustomField>