force-app/main/default/objects/Asset/fields/Subscription_Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Last_Modified_Date__c</fullName>
    <description>Last modified date for the related subscriptions. Set by lookup rollup summary.  Triggers update of current subscription field.</description>
    <label>Subscription Last Modified Date</label>
    <type>DateTime</type>
</CustomField>