force-app/main/default/objects/Asset/fields/Synced_with_AppAdmin_Date__c.field-meta.xml
<CustomField>
    <fullName>Synced_with_AppAdmin_Date__c</fullName>
    <label>Synced with AppAdmin Date</label>
    <type>DateTime</type>
</CustomField>