force-app/main/default/objects/Asset/listViews/AllAssets.listView-meta.xml
<ListView>
    <fullName>AllAssets</fullName>
    <columns>ASSET.NAME</columns>
    <columns>Active__c</columns>
    <columns>PRODUCT2.FAMILY_ENUM</columns>
    <columns>ASSET.PRICE</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Next_Invoice_Date__c</columns>
    <columns>Contract_End_Date__c</columns>
    <columns>Provider__c</columns>
    <columns>Limelight_URL__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.NAME</field>
        <operation>contains</operation>
        <value>review</value>
    </filters>
    <label>All Assets</label>
</ListView>